Удасканаленьні і валідатар чыгуначных станцый

--- a/nazvy/index.html
+++ b/nazvy/index.html
@@ -6,7 +6,9 @@
 <body>
 <a href="nazvy.html">Валідатар назваў населеных пунктаў</a> <br/>
 <a href="vulicy.html">Валідатар перакладу назваў вуліц па ўсім гарадам</a> <br/>
+<a href="cyhunka.html">Валідатар чыгуначных станцый</a> <br/>
 <a href="pamylki.html">Памылкі мапы</a> <br/>
-<a href="vioski/vioski.html">Прагляд вёсак па сельсаветам</a> <br/>
+<a href="vioski/vioski.html">Прагляд вёсак па сельсаветах</a> <br/>
+<a href="translate/">Некаторыя пераклады</a> <br/>
 </body>
 </html>
