Агульныя рэчы валідатара

--- a/nazvy/index.html
+++ b/nazvy/index.html
@@ -9,6 +9,7 @@
 <a href="cyhunka.html">Валідатар чыгуначных станцый</a> <br/>
 <a href="pamylki.html">Памылкі мапы</a> <br/>
 <a href="vioski/vioski.html">Прагляд вёсак па сельсаветах</a> <br/>
+<a href="prypynkiMiensk.html">Прыпынкі ў Менску</a> <br/>
 <a href="translate/">Некаторыя пераклады</a> <br/>
 </body>
 </html>
