--- a/nazvy/index.html
+++ b/nazvy/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<a href="nazvy.html">Валідатар назваў населеных пунктаў</a> <br/>
+<a href="nazvy.html">Валідатар рэгіёнаў і населеных пунктаў</a> <br/>
 <a href="vulicy.html">Валідатар перакладу назваў вуліц па ўсім гарадам</a> <br/>
 <a href="cyhunka.html">Валідатар чыгуначных станцый</a> <br/>
 <a href="pamylki.html">Памылкі мапы</a> <br/>
