--- a/nazvy/index.html
+++ b/nazvy/index.html
@@ -10,6 +10,6 @@
 <a href="pamylki.html">Памылкі мапы</a> <br/>
 <a href="vioski/vioski.html">Прагляд вёсак па сельсаветах</a> <br/>
 <a href="prypynkiMiensk.html">Прыпынкі ў Менску</a> <br/>
-<a href="translate/">Некаторыя пераклады</a> <br/>
+<a href="pieraklad/">Некаторыя пераклады</a> <br/>
 </body>
 </html>
